--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,6 @@ concurrency:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        react:
-          - ^16.8.6
-          - ^17.0.1
-          - ^18.3.1
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -37,15 +31,6 @@ jobs:
           key: build-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
       - name: Install
         run: yarn --immutable
-      - name: Add React version ${{ matrix.react }}
-        run: |
-          yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
-          yarn workspace @carbon/ibm-cloud-cognitive-core add react@${{ matrix.react }} react-dom@${{ matrix.react }} -D
-      - name: Add legacy dependencies
-        if: ${{ startsWith(matrix.react, '^16.') || startsWith(matrix.react, '^17.') }}
-        run: |
-          yarn workspace @carbon/ibm-cloud-cognitive-core add @carbon/react@^1.28.0 -D
-          yarn workspace @carbon/ibm-products add @carbon/react@^1.28.0 -P
       - name: CI build checks
         run: yarn ci-check:build
 
@@ -134,6 +119,44 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: CI snapshot tests for c4p
         run: yarn ci-check:test:c4p:snapshot
+
+  test-c4p-react-major-version:
+    strategy:
+      matrix:
+        react:
+          - ^17.0.1
+          - ^18.3.1
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+          cache: yarn
+      - name: Cache dependencies
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 #4.2.0
+        with:
+          path: '**/node_modules'
+          key:
+            test-c4p-react-major-versions-modules-${{ runner.os }}-${{
+            hashFiles('yarn.lock') }}
+      - name: Install
+        run: yarn --immutable
+      - name: Add React version ${{ matrix.react }}
+        run: |
+          yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
+          yarn workspace @carbon/ibm-cloud-cognitive-core add react@${{ matrix.react }} react-dom@${{ matrix.react }} -D
+      - name: Add legacy dependencies
+        if: ${{ startsWith(matrix.react, '^17.') }}
+        run: |
+          yarn add @testing-library/react@^12.0.0 -D
+          yarn workspace @carbon/ibm-cloud-cognitive-core add @carbon/react@^1.28.0 -D
+          yarn workspace @carbon/ibm-products add @carbon/react@^1.28.0 -P
+      - name: CI tests for c4p with React version ${{ matrix.react }}
+        run: yarn ci-check:test:c4p
+
   test-c4p-wc:
     runs-on: ubuntu-latest
     steps:
