--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -1,6 +1,13 @@
 comment:
   layout: 'header, diff, flags, components'
-
+coverage:
+status:
+  project:
+    default:
+      informational: true
+  patch:
+    default:
+      informational: true
 component_management:
   default_rules: # default rules that will be inherited by all components
     statuses:
