--- a/examples/carbon-for-ibm-products/InterstitialScreenView/gallery.config.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenView/gallery.config.json
@@ -3,7 +3,7 @@
   "package-config": {
     "flags": {
       "component": {
-        "InterstitialScreenView": true
+        "InterstitialScreen": true
       }
     }
   },
