--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
   "command": {
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): publish [skip ci]"
+      "message": "chore(release): publish [skip ci]",
+      "changelog":false
     }
   },
   "ignoreChanges": [
