--- a/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/package.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@carbon/ibm-products": "^2.65.0",
+    "@carbon/ibm-products-styles":"^2.61.0",
     "@carbon/react": "^1.60.3",
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
