--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -29,10 +29,30 @@ on:
         default: true
 
 jobs:
+  # This job creates the git tag for the release (ie. v2.47.0)
+  create-release-tag:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: '0'
+          token: ${{ secrets.GH_TOKEN_LERNA }} # https://github.com/lerna/lerna/issues/1957
+
+      # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
+      - run: |
+          git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
+          git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
+      - name: Create tag and push
+        run: |
+          git tag -a ${{ github.event.inputs.tag }} -m "Release ${{ github.event.inputs.tag }}"
+          git push origin ${{ github.event.inputs.tag }}
+
   create-pull-request:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     if: github.event.inputs.create-pr == 'true'
+    needs: create-release-tag
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
@@ -60,6 +80,7 @@ jobs:
           git checkout -b chore/${{ github.event.inputs.tag }}-release
 
       - name: Generate CHANGELOG.md
+        # The tags are now guaranteed to exist before this step runs
         run: |
           node ./scripts/get-changelog.js -f ${{ github.event.inputs.previous-tag }} -t ${{ github.event.inputs.tag }} -w true
 
@@ -78,25 +99,6 @@ jobs:
             - [ ] Verify CI passes as expected'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # This job creates the git tag for the release (ie. v2.47.0)
-  create-release-tag:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          fetch-depth: '0'
-          token: ${{ secrets.GH_TOKEN_LERNA }} # https://github.com/lerna/lerna/issues/1957
-
-      # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
-      - run: |
-          git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
-          git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
-      - name: Create tag and push
-        run: |
-          git tag -a ${{ github.event.inputs.tag }} -m "Release ${{ github.event.inputs.tag }}"
-          git push origin ${{ github.event.inputs.tag }}
 
   # This job creates the release with the git tag pushed from job above with the corresponding
   # release notes from the previous version to current
