--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -12,6 +12,8 @@ jobs:
   deploy-latest-storybook:
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    permissions:
+      contents: write
     steps:
       # Checkout release branch to build storybook
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -31,9 +33,19 @@ jobs:
         run: yarn storybook:build
 
       # Deploy to staging Github Pages using `gh-pages` package
-      - name: Deploy to latest
+      - name: Prepare latest directory
         run: |
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages -d packages/ibm-products/storybook-static -u "github-actions-bot <support+actions@github.com>" --dest latest --message "chore(deploy): deploy to gh-pages latest"
+          mkdir -p latest-dist/react
+          cp -r packages/ibm-products/storybook-static/* latest-dist/react
+
+          mkdir -p latest-dist/web-components
+          cp -r packages/ibm-products-web-components/storybook-static/* latest-dist/web-components
+
+      - name: Deploy latest Storybooks to gh-pages/latest
+        run: |
+          npx gh-pages -d latest-dist \
+            -u "github-actions-bot <support+actions@github.com>" \
+            --dest latest \
+            --message "chore(deploy): deploy React and Web Components Storybooks to latest"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
