--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -56,7 +56,7 @@
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.64.0",
     "@carbon/styles": "1.79.0",
-    "@carbon/web-components": "2.27.1",
+    "@carbon/web-components": "2.32.0-rc.0",
     "@ibm/telemetry-js": "^1.9.1",
     "lit": "^3.1.0"
   },
