--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-config-carbon": "^0.11.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "stylelint": "^16.16.0",
     "stylelint-config-carbon": "^1.20.0",
@@ -125,6 +125,7 @@
     "braces": "^3.0.3",
     "cross-spawn": "7.0.6",
     "micromatch": "4.0.8",
+    "react-is": "^19.0.0",
     "semver": "7.7.2",
     "ws": "^8.17.1",
     "@babel/runtime": "7.27.3"
