--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -109,6 +109,8 @@
     "namor": "^1.1.2",
     "npm-check-updates": "^18.0.0",
     "npm-run-all": "^4.1.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.35.0",
     "rollup-plugin-strip-banner": "^3.1.0",
@@ -136,7 +138,7 @@
     "@carbon/grid": "^11.34.0",
     "@carbon/layout": "^11.32.0",
     "@carbon/motion": "^11.26.0",
-    "@carbon/react": "^1.81.0",
+    "@carbon/react": "^1.84.0",
     "@carbon/themes": "^11.50.0",
     "@carbon/type": "^11.38.0",
     "react": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0",
