--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -109,6 +109,8 @@
     "namor": "^1.1.2",
     "npm-check-updates": "^18.0.0",
     "npm-run-all": "^4.1.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.35.0",
     "rollup-plugin-strip-banner": "^3.1.0",
