chore: remove typings directory

--- a/packages/ibm-products-web-components/tsconfig.json
+++ b/packages/ibm-products-web-components/tsconfig.json
@@ -8,8 +8,7 @@
       "src/typings",
       "tests/typings",
       "node_modules/@types",
-      "../../node_modules/@types",
-      "./storybook/typings"
+      "../../node_modules/@types"
     ],
     "declaration": true,
     "skipLibCheck": true,
