--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -58,6 +58,7 @@
     "@carbon/styles": "1.82.0",
     "@carbon/web-components": "2.30.0",
     "@ibm/telemetry-js": "^1.9.1",
+    "@lit/context": "^1.1.5",
     "lit": "^3.1.0"
   },
   "devDependencies": {
