--- a/packages/ibm-products-web-components/examples/set-of-tags/package.json
+++ b/packages/ibm-products-web-components/examples/set-of-tags/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "export-modal",
+  "name": "set-of-tags",
   "version": "0.1.0",
   "private": true,
   "description": "Sample project for getting started with the Web Components from Carbon for IBM Products.",
