--- a/packages/ibm-products-web-components/examples/set-of-users/package.json
+++ b/packages/ibm-products-web-components/examples/set-of-users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "set-of-actions",
+  "name": "set-of-users",
   "version": "0.1.0",
   "private": true,
   "description": "Sample project for getting started with the Web Components from Carbon for IBM Products.",
@@ -15,6 +15,7 @@
     "@carbon/ibm-products-styles": "^2.62.0-rc.0",
     "@carbon/styles": "1.79.0",
     "@carbon/web-components": "2.27.1",
+    "@carbon/ibm-products-web-components": "^0.16.0",
     "lit": "^3.2.1",
     "sass": "^1.64.1"
   },
