--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,8 +40,7 @@
     "remark-gfm": "^4.0.1",
     "rimraf": "^6.0.1",
     "sass": "^1.85.1",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.2"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "lottie-web": "^5.12.2"
