--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -113,6 +113,7 @@
     "sass": "^1.85.1",
     "storybook": "^8.6.12",
     "typescript-config-carbon": "^0.5.0",
+    "vite": "^7.0.0",
     "yargs": "^18.0.0"
   },
   "dependencies": {
