--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,9 +18,7 @@
     "carbon for ibm products"
   ],
   "scripts": {
-    "clean": "yarn dlx rimraf storybook-static css",
-    "//upgrade-dependencies": "# don't upgrade carbon (done globally), react/react-dom (issue #1595)",
-    "upgrade-dependencies": "npm-check-updates -u --dep dev,peer,prod --color --reject '/(carbon|^react$|^react-dom$)/'"
+    "clean": "yarn dlx rimraf storybook-static css"
   },
   "devDependencies": {
     "@carbon/grid": "^11.37.0",
@@ -31,7 +29,6 @@
     "@carbon/themes": "^11.54.0",
     "@carbon/type": "^11.41.0",
     "fast-glob": "^3.3.3",
-    "npm-check-updates": "^18.0.0",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
