--- a/packages/ibm-products-styles/package.json
+++ b/packages/ibm-products-styles/package.json
@@ -42,9 +42,7 @@
     "build-css-update-maps": "node ../../scripts/updateSourceMaps.js",
     "clean": "rimraf css scss",
     "postinstall": "ibmtelemetry --config=telemetry.yml",
-    "test": "jest --colors",
-    "//upgrade-dependencies": "# don't upgrade carbon (done globally), react/react-dom (explicit range peer dependency), chalk (issue #1596)",
-    "upgrade-dependencies": "npm-check-updates -u --dep dev,peer,prod --color --reject '/(carbon|^react$|^react-dom$|^chalk$|^namor)/'"
+    "test": "jest --colors"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
@@ -54,7 +52,6 @@
     "jest": "^29.7.0",
     "jest-config-ibm-cloud-cognitive": "^1.29.0-rc.0",
     "jest-environment-jsdom": "^29.7.0",
-    "npm-check-updates": "^18.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "sass": "^1.85.1",
