--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -56,9 +56,7 @@
     "storybook:build": "run-s build:carbon build:storybook",
     "storybook:start": "storybook dev ./public -p 3000",
     "telemetry-config": "ibmtelemetry-config generate --id 495342db-5046-4ecf-85ea-9ffceb6f8cdf --endpoint https://www-api.ibm.com/ibm-telemetry/v1/metrics --files ./src/components/**/*.(tsx|js|jsx)",
-    "test": "jest --colors",
-    "//upgrade-dependencies": "# don't upgrade carbon (done globally), react/react-dom (explicit range peer dependency), chalk (issue #1596)",
-    "upgrade-dependencies": "npm-check-updates -u --dep dev,peer,prod --color --reject '/(carbon|^react$|^react-dom$|^chalk$|^namor)/'"
+    "test": "jest --colors"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
@@ -105,7 +103,6 @@
     "jest-config-ibm-cloud-cognitive": "^1.29.0-rc.0",
     "jest-environment-jsdom": "^29.7.0",
     "namor": "^1.1.2",
-    "npm-check-updates": "^18.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
