fix: perform full  build before wc story build

--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -31,7 +31,7 @@ jobs:
         run: yarn install
       - name: Build storybook
         run: |
-          yarn storybook:build
+          yarn build
           yarn storybook-wc:build
 
       # Deploy to staging Github Pages using `gh-pages` package
