--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -33,7 +33,9 @@ jobs:
         run: |
           yarn build
           yarn storybook-wc:build
-
+      # Set authenticated Git remote
+      - name: Set authenticated Git remote
+        run: git remote set-url origin https://git:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
       # Deploy to staging Github Pages using `gh-pages` package
       - name: Prepare latest directory
         run: |
