--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -26,8 +26,10 @@ jobs:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
           cache: 'yarn'
+
       - name: Install dependencies
         run: yarn install
+
       - name: Build packages and storybook
         run: |
           yarn build
@@ -41,6 +43,12 @@ jobs:
 
           mkdir -p staging-dist/web-components
           cp -r packages/ibm-products-web-components/storybook-static/* staging-dist/web-components
+
+      # Set authenticated Git remote
+      - name: Set authenticated Git remote
+        run:
+          git remote set-url origin https://git:${{ secrets.GITHUB_TOKEN
+          }}@github.com/${{ github.repository }}.git
 
       - name: Deploy both Storybooks to GitHub Pages (gh-pages/staging)
         run: |
