--- a/package.json
+++ b/package.json
@@ -126,7 +126,8 @@
     "ws": "^8.17.1",
     "@babel/runtime": "7.27.6",
     "brace-expansion@^1.1.7": "1.1.12",
-    "brace-expansion@^2.0.1": "2.0.2"
+    "brace-expansion@^2.0.1": "2.0.2",
+    "form-data": "4.0.4"
   },
   "lint-staged": {
     "!(examples/**/*)**/*.{js,jsx,ts,tsx,mjs}": [
