--- a/examples/carbon-for-ibm-products/BigNumbers/package.json
+++ b/examples/carbon-for-ibm-products/BigNumbers/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "BigNumbers-component-example",
-  "description": "An example showing use of the BigNumbers component from the @carbon/ibm-products component library.",
+  "name": "BigNumber-component-example",
+  "description": "An example showing use of the BigNumber component from the @carbon/ibm-products component library.",
   "keywords": [
     "carbon",
     "ibm",
     "ibm-products",
     "component",
-    "bignumbers",
+    "bignumber",
     "big",
     "numbers"
   ],
