--- a/packages/ibm-products-web-components/examples/set-of-tags/package.json
+++ b/packages/ibm-products-web-components/examples/set-of-tags/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
+    "typescript": "^5.5.3",
     "vite": "5.4.19",
-    "vite-plugin-lit-css": "^2.1.0",
-    "typescript": "^5.5.3"
+    "vite-plugin-lit-css": "^2.1.0"
   }
 }
