--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -191,7 +191,7 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # 4.6.2
         with:
           name: playwright-avt-report
-          path: ./.playwright
+          path: .playwright/results.json
 
   vrt-runner:
     runs-on: ubuntu-latest
