--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,8 +190,9 @@ jobs:
         if: always()
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # 4.6.2
         with:
+          include-hidden-files: true
           name: playwright-avt-report
-          path: playwright/
+          path: .playwright/
 
   vrt-runner:
     runs-on: ubuntu-latest
