--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,7 +192,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: blob-report-${{ matrix.shardIndex }}
-          path: .playwright/blob-reports
+          path: .playwright/blob-report
           retention-days: 1
 
   merge-reports:
@@ -218,7 +218,7 @@ jobs:
 
       - name: Merge into HTML Report
         run:
-          npx playwright merge-reports --reporter html .playwright/blob-reports
+          npx playwright merge-reports --reporter html .playwright/blob-report
 
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
