--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,8 +154,7 @@ jobs:
   avt-runner:
     strategy:
       matrix:
-        shardIndex: [1, 2, 3, 4]
-        shardTotal: [4]
+        shard: [1, 2, 3, 4]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -184,14 +183,14 @@ jobs:
       - name: Run Playwright tests
         if: github.repository == 'carbon-design-system/ibm-products'
         run: |
-          npx playwright test --project chromium --grep @avt --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+          npx playwright test --project chromium --grep @avt --shard="${{ matrix.shard }}/4"
       - name: Stop storybook
         run: kill ${{ steps.storybook.outputs.pid }}
       - name: Upload blob report to GitHub Actions Artifacts
         if: ${{ !cancelled() }}
         uses: actions/upload-artifact@v4
         with:
-          name: blob-report-${{ matrix.shardIndex }}
+          name: blob-report-${{ matrix.shard }}
           path: .playwright/blob-report
           retention-days: 1
 
