--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
@@ -168,10 +169,13 @@ jobs:
           cache: yarn
       - name: Install
         run: yarn
+
       - name: Install browsers
         run: yarn playwright install --with-deps
+
       - name: Build project
         run: yarn build
+
       - name: Run storybook
         id: storybook
         run: |
@@ -182,17 +186,19 @@ jobs:
         with:
           URL: 'http://localhost:3000'
         timeout-minutes: 3
+
       - name: Run AVT
         if: github.repository == 'carbon-design-system/ibm-products'
         run: |
           yarn playwright test --project chromium --grep @avt --shard="${{ matrix.shardIndex }}/${{ matrix.shardTotal }}"
       - name: Stop storybook
         run: kill ${{ steps.storybook.outputs.pid }}
+
       - name: Upload blob report to GitHub Actions Artifacts
         if: ${{ !cancelled() }}
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-avt-blob-report-${{ matrix.shardIndex }}
+          name: blob-report-${{ matrix.shardIndex }}
           path: blob-report
           retention-days: 1
 
@@ -219,23 +225,21 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Download avt blob reports from GitHub Actions Artifacts
+      - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
         with:
-          path: all-playwright-avt-blob-reports
-          pattern: playwright-avt-blob-report-*
+          path: all-blob-reports
+          pattern: blob-report-*
           merge-multiple: true
 
-      - name: Merge avt reports into HTML Report
-        run:
-          npx playwright merge-reports --reporter html
-          ./all-playwright-avt-blob-reports
+      - name: Merge into HTML Report
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
 
-      - name: Upload avt HTML report
+      - name: Upload HTML report
         uses: actions/upload-artifact@v4
         with:
-          name: html-playwright-avt-report--attempt-${{ github.run_attempt }}
-          path: playwright-avt-report
+          name: html-report--attempt-${{ github.run_attempt }}
+          path: playwright-report
           retention-days: 14
 
   vrt-runner:
